force-app/src/objects/DonorApi__Gift_In_Kind__c.object
<CustomObject>
    <description>Record and receipt non-cash gifts including gifts in kind, and stock gifts.</description>
    <fields>
        <fullName>DonorApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account (organization or household) providing the non-cash gift.</description>
        <inlineHelpText>The account (organization or household) providing the non-cash gift.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gifts In-Kind</relationshipLabel>
        <relationshipName>Gifts_In_Kind</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Asset_Sale_Amount__c</fullName>
        <description>The total amount the asset was sold for, not including sales agent commissions and other sales related costs.</description>
        <inlineHelpText>The total amount the asset was sold for, not including sales agent commissions and other sales related costs.</inlineHelpText>
        <label>Asset Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override/Required** Link to the related Business Group.</description>
        <inlineHelpText>**System Calculated/Override/Required** Link to the related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Gifts In-Kind</relationshipLabel>
        <relationshipName>Gifts_In_Kind</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Calculated_Value__c</fullName>
        <description>**System Calculated** Total of Gift In Kind Value + Net Asset Value. Provides a single column for reporting on the value of the non-cash gifts.</description>
        <formula>DonorApi__GIK_Value__c + DonorApi__Net_Asset_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Total of Gift In Kind Value + Net Asset Value. Provides a single column for reporting on the value of the non-cash gifts.
GIK_Value__c + Net_Asset_Value__c</inlineHelpText>
        <label>Calculated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Category__c</fullName>
        <description>**Required** Select a category for the non-cash gift. This specifies the type of good, service, or asset donated.</description>
        <inlineHelpText>**Required** Select a category for the non-cash gift. This specifies the type of good, service, or asset donated.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Securities</fullName>
                </value>
                <value>
                    <fullName>Mutual Funds</fullName>
                </value>
                <value>
                    <fullName>Closely Held Stock</fullName>
                </value>
                <value>
                    <fullName>IRA Charitable Rollover</fullName>
                </value>
                <value>
                    <fullName>Other Assets</fullName>
                </value>
                <value>
                    <fullName>Goods</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact (individual person) providing the non-cash gift.</description>
        <inlineHelpText>The contact (individual person) providing the non-cash gift.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gifts In-Kind</relationshipLabel>
        <relationshipName>Gifts_In_Kind</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Date_Expected__c</fullName>
        <description>The date the non-cash gift is expected to be received.</description>
        <inlineHelpText>The date the non-cash gift is expected to be received.</inlineHelpText>
        <label>Date Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Date_Received__c</fullName>
        <description>The date the non-cash gift was received.</description>
        <inlineHelpText>The date the non-cash gift was received.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Date_Sold__c</fullName>
        <description>The date the asset was sold.</description>
        <inlineHelpText>The date the asset was sold.</inlineHelpText>
        <label>Date Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Description__c</fullName>
        <description>Free form text field for notes/description of the non-cash gift.</description>
        <inlineHelpText>Free form text field for notes/description of the non-cash gift.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DonorApi__Do_Not_Acknowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary indicator for non-cash gifts that should not be acknowledged. Default is unchecked.</description>
        <inlineHelpText>Primary indicator for non-cash gifts that should not be acknowledged. Default is unchecked.</inlineHelpText>
        <label>Do Not Acknowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Donor_Link__c</fullName>
        <description>**System Calculated** A link to the related donor&apos;s record as determined by the value of the &quot;Entity&quot; field.</description>
        <formula>IF(ISPICKVAL(DonorApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; DonorApi__Account__r.Id, DonorApi__Account__r.Name), HYPERLINK(&quot;/&quot; &amp; DonorApi__Contact__r.Id, DonorApi__Contact__r.FirstName &amp; &quot; &quot; &amp; DonorApi__Contact__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** A link to the related donor&apos;s record as determined by the value of the &quot;Entity&quot; field.</inlineHelpText>
        <label>Donor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Entity__c</fullName>
        <description>**Required** Select &quot;Account&quot; if the provider of the non-cash gift is an account, select &quot;Contact&quot; if the provided is a contact.</description>
        <inlineHelpText>**Required** Select &quot;Account&quot; if the provider of the non-cash gift is an account, select &quot;Contact&quot; if the provided is a contact.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Expected_Asset_Value__c</fullName>
        <description>The expected value of the asset at the time of commitment.</description>
        <inlineHelpText>The expected value of the asset at the time of commitment.</inlineHelpText>
        <label>Expected Asset Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override/Required** The fund related to the non-cash gift.</description>
        <inlineHelpText>**System Calculated/Override/Required** The fund related to the non-cash gift.</inlineHelpText>
        <label>Fund</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Gifts In-Kind</relationshipLabel>
        <relationshipName>Gifts_In_Kind</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__GIK_Value__c</fullName>
        <description>The total value of the goods and/or services provided.</description>
        <inlineHelpText>The total value of the goods and/or services provided.</inlineHelpText>
        <label>Goods/Services Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Is_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary indicator for non-cash gifts that have been acknowledged. Default is unchecked.</description>
        <inlineHelpText>Primary indicator for non-cash gifts that have been acknowledged. Default is unchecked.</inlineHelpText>
        <label>Is Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Net_Asset_Value__c</fullName>
        <description>**System Calculated** Asset Sale Amount - (Sales Agent Commission + Other Costs of Sale)</description>
        <formula>DonorApi__Asset_Sale_Amount__c - (DonorApi__Sales_Agent_Commission__c + DonorApi__Other_Costs_of_Sale__c )</formula>
        <inlineHelpText>**System Calculated** Asset Sale Amount - (Sales Agent Commission + Other Costs of Sale)</inlineHelpText>
        <label>Net Asset Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Other_Costs_of_Sale__c</fullName>
        <description>Other fees and costs incurred related to the asset.</description>
        <inlineHelpText>Other fees and costs incurred related to the asset.</inlineHelpText>
        <label>Other Costs of Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Received_Asset_Value__c</fullName>
        <description>The total value of the asset on the day it was received.</description>
        <inlineHelpText>The total value of the asset on the day it was received.</inlineHelpText>
        <label>Received Asset Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Sales_Agent_Commission__c</fullName>
        <description>The total commission paid to the sales agent of the asset.</description>
        <inlineHelpText>The total commission paid to the sales agent of the asset.</inlineHelpText>
        <label>Sales Agent Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Sales_Agent_Company__c</fullName>
        <description>The name of the company employing the sales agent responsible for selling the asset.</description>
        <inlineHelpText>The name of the company employing the sales agent responsible for selling the asset.</inlineHelpText>
        <label>Sales Agent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Sales_Agent_Contact__c</fullName>
        <description>The name of the primary sales agent for the asset.</description>
        <inlineHelpText>The name of the primary sales agent for the asset.</inlineHelpText>
        <label>Sales Agent Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Sales_Agent_Email__c</fullName>
        <description>The email address for the sales agent related to the asset.</description>
        <inlineHelpText>The email address for the sales agent related to the asset.</inlineHelpText>
        <label>Sales Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DonorApi__Sales_Agent_Fax__c</fullName>
        <description>The fax number for the sales agent related to the asset.</description>
        <inlineHelpText>The fax number for the sales agent related to the asset.</inlineHelpText>
        <label>Sales Agent Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DonorApi__Sales_Agent_Phone__c</fullName>
        <description>The phone number for the sales agent related to the asset.</description>
        <inlineHelpText>The phone number for the sales agent related to the asset.</inlineHelpText>
        <label>Sales Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DonorApi__Status__c</fullName>
        <description>**Required** The current status of non-cash gifts defaults to committed and is required for all non-cash gifts.</description>
        <inlineHelpText>**Required** The current status of non-cash gifts defaults to committed and is required for all non-cash gifts.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Stock_Name__c</fullName>
        <description>The name of the stock/security (if applicable) for gifts of stock.</description>
        <inlineHelpText>The name of the stock/security (if applicable) for gifts of stock.</inlineHelpText>
        <label>Stock Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Stock_Symbol__c</fullName>
        <description>The ticker (stock) symbol for the security.</description>
        <inlineHelpText>The ticker (stock) symbol for the security.</inlineHelpText>
        <label>Stock Symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Gift In-Kind</label>
    <listViews>
        <fullName>DonorApi__All</fullName>
        <columns>NAME</columns>
        <columns>DonorApi__Account__c</columns>
        <columns>DonorApi__Contact__c</columns>
        <columns>DonorApi__Description__c</columns>
        <columns>DonorApi__Status__c</columns>
        <columns>DonorApi__Category__c</columns>
        <columns>DonorApi__Fund__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Non-Cash Gift ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts In-Kind</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>